// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders markup with state 1`] = `
<ng-ais-menu
  cx={[Function Function]}
  limit={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    <ul
      class="ais-Menu-list"
    >
      
          
      
      <li
        class="ais-Menu-item ais-Menu-item--selected"
      >
        
            
        <a
          class="ais-Menu-link"
          href=""
        >
          
              
          <span
            class="ais-Menu-label"
          >
            foo
          </span>
          
              
          <span
            class="ais-Menu-count"
          >
            2
          </span>
          
            
        </a>
        
          
      </li>
      <li
        class="ais-Menu-item"
      >
        
            
        <a
          class="ais-Menu-link"
          href=""
        >
          
              
          <span
            class="ais-Menu-label"
          >
            bar
          </span>
          
              
          <span
            class="ais-Menu-count"
          >
            3
          </span>
          
            
        </a>
        
          
      </li>
      <li
        class="ais-Menu-item"
      >
        
            
        <a
          class="ais-Menu-link"
          href=""
        >
          
              
          <span
            class="ais-Menu-label"
          >
            foobar
          </span>
          
              
          <span
            class="ais-Menu-count"
          >
            4
          </span>
          
            
        </a>
        
          
      </li>
      
        
    </ul>
    
  
        
    
    
      
  </div>
    
</ng-ais-menu>
`;

exports[`Menu renders markup without state 1`] = `
<ng-ais-menu
  cx={[Function Function]}
  limit={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    <ul
      class="ais-Menu-list"
    >
      
          
      
      
        
    </ul>
    
  
        
    
    
      
  </div>
    
</ng-ais-menu>
`;

exports[`Menu should apply \`transformItems\` if specified 1`] = `
<ng-ais-menu
  cx={[Function Function]}
  limit={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  transformItems={[Function Function]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-Menu"
  >
    
        
    <ul
      class="ais-Menu-list"
    >
      
          
      
      <li
        class="ais-Menu-item ais-Menu-item--selected"
      >
        
            
        <a
          class="ais-Menu-link"
          href=""
        >
          
              
          <span
            class="ais-Menu-label"
          >
            transformed - foo
          </span>
          
              
          <span
            class="ais-Menu-count"
          >
            2
          </span>
          
            
        </a>
        
          
      </li>
      <li
        class="ais-Menu-item"
      >
        
            
        <a
          class="ais-Menu-link"
          href=""
        >
          
              
          <span
            class="ais-Menu-label"
          >
            transformed - bar
          </span>
          
              
          <span
            class="ais-Menu-count"
          >
            3
          </span>
          
            
        </a>
        
          
      </li>
      <li
        class="ais-Menu-item"
      >
        
            
        <a
          class="ais-Menu-link"
          href=""
        >
          
              
          <span
            class="ais-Menu-label"
          >
            transformed - foobar
          </span>
          
              
          <span
            class="ais-Menu-count"
          >
            4
          </span>
          
            
        </a>
        
          
      </li>
      
        
    </ul>
    
  
        
    
    
      
  </div>
    
</ng-ais-menu>
`;

exports[`Menu should be hidden with \`autoHideContainer\` 1`] = `
<ng-ais-menu
  autoHideContainer={[Function Boolean]}
  cx={[Function Function]}
  limit={[Function Number]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showLessLabel={[Function String]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      
    
</ng-ais-menu>
`;
